# 3DGameEngineCreation

./: .gitignore  CMakeLists.txt  main.cpp
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Demo/: main.cpp
Engine/: CMakeLists.txt
Engine/CommandBuffers/: CommandBuffers.cpp  CommandBuffers.hpp
Engine/CommandPool/: CommandPool.hpp
Engine/DepthResources/: DepthResources.hpp
Engine/DescriptorSetLayout/: DescriptorSetLayout.cpp
Engine/DescriptorSets/: DescriptorSets.cpp  DescriptorSets.hpp
Engine/Device/: Device.cpp  Device.hpp
Engine/FileReader/: FileReader.cpp
Engine/Framebuffers/: Framebuffers.cpp  Framebuffers.hpp
Engine/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.hpp
Engine/ImageViews/: ImageViews.cpp
Engine/Instance/: Instance.cpp  Instance.hpp
Engine/Model/: Model.cpp  Model.hpp
Engine/Private/CommandBuffers/: CommandBuffers.cpp
Engine/Private/CommandPool/: CommandPool.cpp
Engine/Private/Compute/CommandBuffers/: CommandBuffers.cpp  CommandBuffers.hpp
Engine/Private/Compute/CommandPool/: CommandPool.cpp  CommandPool.hpp
Engine/Private/Compute/DebugMessenger/: DebugMessenger.cpp  DebugMessenger.hpp
Engine/Private/Compute/Device/: Device.cpp  Device.hpp
Engine/Private/Compute/FileReader/: FileReader.hpp
Engine/Private/Compute/Instance/: Instance.cpp  Instance.hpp
Engine/Private/Compute/QueueFamily/: QueueFamily.cpp  QueueFamily.hpp
Engine/Private/Compute/Semaphore/: Semaphore.cpp  Semaphore.hpp
Engine/Private/Compute/Surface/: Surface.cpp  Surface.hpp
Engine/Private/DebugMessenger/: DebugMessenger.cpp  DebugMessenger.hpp
Engine/Private/DepthResources/: DepthResources.cpp  DepthResources.hpp
Engine/Private/DescriptorPool/: DescriptorPool.cpp  DescriptorPool.hpp
Engine/Private/DescriptorSetLayout/: DescriptorSetLayout.cpp  DescriptorSetLayout.hpp
Engine/Private/Device/: Device.cpp
Engine/Private/Framebuffers/: Framebuffers.hpp
Engine/Private/Graphics/Camera/: Camera.cpp  Camera.hpp
Engine/Private/Graphics/DepthResources/: DepthResources.cpp  DepthResources.hpp
Engine/Private/Graphics/DescriptorPool/: DescriptorPool.cpp  DescriptorPool.hpp
Engine/Private/Graphics/DescriptorSetLayout/: DescriptorSetLayout.cpp  DescriptorSetLayout.hpp
Engine/Private/Graphics/DescriptorSets/: DescriptorSets.cpp  DescriptorSets.hpp
Engine/Private/Graphics/Framebuffers/: Framebuffers.cpp  Framebuffers.hpp
Engine/Private/Graphics/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.hpp
Engine/Private/Graphics/ImageViews/: ImageViews.cpp  ImageViews.hpp
Engine/Private/Graphics/Model/: Model.cpp  Model.hpp
Engine/Private/Graphics/Shader/: Shader.cpp  Shader.hpp
Engine/Private/Graphics/SwapChain/: SwapChain.cpp  SwapChain.hpp
Engine/Private/Graphics/TextureImage/: TextureImage.cpp  TextureImage.hpp
Engine/Private/Graphics/TextureImageView/: TextureImageView.cpp  TextureImageView.hpp
Engine/Private/Graphics/TextureSampler/: TextureSampler.cpp  TextureSampler.hpp
Engine/Private/Graphics/UniformBuffers/: UniformBuffers.cpp  UniformBuffers.hpp
Engine/Private/Graphics/Vertex/: Vertex.hpp
Engine/Private/Graphics/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.hpp
Engine/Private/ImageViews/: ImageViews.hpp
Engine/Private/Instance/: Instance.hpp
Engine/Private/Model/: Model.cpp
Engine/Private/Physics/Maths/: Math.cpp  Math.hpp  TriPhysics.cpp  TriPhysics.hpp
Engine/Private/Semaphore/: Semaphore.cpp  Semaphore.hpp
Engine/Private/Surface/: Surface.cpp
Engine/Private/SwapChain/: SwapChain.cpp  SwapChain.hpp
Engine/Private/TextureImage/: TextureImage.cpp  TextureImage.hpp
Engine/Private/TextureImageView/: TextureImageView.cpp  TextureImageView.hpp
Engine/Private/Tools/: VkTools.cpp  VkTools.hpp
Engine/Private/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.hpp
Engine/Private/Window/: Window.cpp  Window.hpp
Engine/Public/Application/: Application.cpp  Application.hpp
Engine/Public/Key/: Key.cpp  Key.hpp
Engine/Public/Object/: Object.cpp  Object.hpp
Engine/Public/PublicModel/: PublicModel.cpp  PublicModel.hpp
Engine/Public/Rect/: Rect.cpp  Rect.hpp
Engine/Public/Texture/: Texture.cpp  Texture.hpp
Engine/QueueFamily/: QueueFamily.hpp
Engine/Shader/: Shader.hpp
Engine/Surface/: Surface.hpp
Engine/SwapChain/: SwapChain.cpp  SwapChain.hpp
Engine/TextureImage/: TextureImage.cpp  TextureImage.hpp
Engine/TextureImageView/: TextureImageView.cpp  TextureImageView.hpp
Engine/TextureSampler/: TextureSampler.hpp
Engine/UniformBuffers/: UniformBuffers.cpp  UniformBuffers.hpp
Engine/Vertex/: Vertex.cpp  Vertex.hpp
Engine/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.hpp
Engine/Window/: Window.cpp  Window.hpp
Engine/ourLibs/miniobjloader/: loader.cpp  loader.hpp
RtsGame/Building/: SM_Archery.uasset  SM_Stables.uasset  SM_Tower_A.uasset  SM_TownHall.uasset
RtsGame/Map/: BPI_GameMode.uasset  RtsGameGameModeBase_Bp.uasset  RtsGameGameMode_Bp.uasset  RtsPlayerControll_Bp.uasset  RtsPlayerController_Bp.uasset
RtsGame/Menu/: ChatGamePlay.uasset  ChatText.uasset  GameInstanceMenu.uasset  INT_LobbyPc.uasset  Menu.umap  MenuHud.uasset  Menu_BuiltData.uasset  Menu_GM.uasset  Menu_PC.uasset  PlayerInfo.uasset  RaceInfo.uasset
RtsGame/Unity/: MyRtsUnity.uasset
Shaders/: shader.vert
Source/: RtsGame.Target.cs  RtsGameEditor.Target.cs
Source/RtsGame/: RtsBatimentType.cpp  RtsBatimentType.h  RtsBuildingBatiment.cpp  RtsBuildingBatiment.h  RtsBuildingTmp.cpp  RtsBuildingTmp.h  RtsCameraComponent.cpp  RtsCameraComponent.h  RtsGame.Build.cs  RtsGameGameModeBase.h  RtsMainGameHud.cpp  RtsMainGameHud.h  RtsNavigationSystemV1.cpp  RtsNavigationSystemV1.h  RtsPlayerController.cpp  RtsPlayerController.h  RtsResource.cpp  RtsResource.h  RtsResourceType.cpp  RtsResourceType.h  RtsRessourceType.cpp  RtsRessourceType.h  RtsSpectatorPawn.cpp  RtsSpectatorPawn.h  RtsUnity.cpp  RtsUnity.h  RtsUnityAIController.cpp  RtsUnityAIController.h  RtsUnityAnimInstance.cpp  RtsUnityAnimInstance.h  RtsUnityType.cpp  RtsUnityType.h  RtsUserWidget.cpp  RtsUserWidget.h
(+70 files in other folders)
